# layer8-interceptor-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  package-lock.json  post_build.gawk
.github/workflows/: publish.yml  quality-gate.yml
service_provider_mock/: package-lock.json
service_provider_mock/game-arena/: README.md  index.html  package-lock.json  vite.config.js
service_provider_mock/game-arena/public/: index.html
service_provider_mock/game-arena/server/: package-lock.json  server.js
service_provider_mock/game-arena/src/: App.vue
service_provider_mock/game-arena/src/components/: TicTacToe.vue
service_provider_mock/tic-tac-toe/: Dockerfile.frontend  TODO.md  dev.env  index.html  package-lock.json  package.json
service_provider_mock/tic-tac-toe/server/: Dockerfile  Dockerfile.backend  package.json  server.js
service_provider_mock/tic-tac-toe/src/components/: TicTacToe.vue
service_provider_mock/websocket-app/: README.md  index.html  package-lock.json  package.json
service_provider_mock/websocket-app/server/: package-lock.json  package.json  server.js
service_provider_mock/websocket-app/src/: App.vue  main.js
service_provider_mock/websocket-app/src/components/: ChatView.vue
service_provider_mock/websocket-app/src/router/: index.js
service_provider_mock/wgp/: README.md  package-lock.json  package.json
service_provider_mock/wgp/backend/: .env.dev  mock-database.js  other  package-lock.json  package.json  server.js
service_provider_mock/wgp/frontend/: Dockerfile  package-lock.json  package.json
service_provider_mock/wgp/frontend/src/: App.vue
service_provider_mock/wgp/frontend/src/components/: Navbar.vue
service_provider_mock/wgp/frontend/src/router/: index.js
service_provider_mock/wgp/frontend/src/views/: Callback.vue  Home.vue  LoginRegister.vue  StressTest.vue  Tester.vue
src/: crypto.rs  health_check.rs  indexed_db.js  js.rs  js_imports.rs  lib.rs  network_state.rs  types.rs  websocket.rs
src/js/: indexed_db.js
src/js_glue/: formdata_polyfill.js  formdata_polyfill.ts  glue_indexed_db.js  glue_websockets.js  js_imports.rs  mod.rs
tests/: crypto.rs  crypto_test.rs  db_cache.mjs  mock-server.js  package-lock.json  package.json  round_trip.rs  server_retry.rs
