[package]
name = "layer8-interceptor-rs"
# The versions have no bearing, only for the PoC publishing to npm before migrating to the Org account                                                  
version = "0.0.6"
edition = "2021"
authors = ["Osoro Bironga <fanosoro@gmail.com>"]
description = "This repository contains a Rust implementation of the Layer8 Interceptor. Analogous to <https://github.com/globe-and-citizen/layer8-interceptor>"
repository = "github.com/muse254/layer8-interceptor-rs"
license = "GNU GPLv2"
readme = "README.md"
categories = ["wasm"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
base64 = { version = "0.22.1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2.5.2"
wasm-bindgen-futures = "0.4"
reqwest = "0.12.7"
js-sys = "0.3.70"
serde-wasm-bindgen = "0.6.5"
uuid = { version = "1", features = ["js"] }
web-sys = { version = "0.3.70", features = [
    "FormData",
    "File",
    "Headers",
    "Response",
    "ResponseInit",
    'ReadableStream',
    'ReadableStreamDefaultReader',
] }
layer8-primitives = { git = "https://github.com/muse254/layer8-primitives-rs.git", branch = "main" } # TODO: Publish to crates.io
